namespace RPG.Utility
{
    public static class Constants
    {
        public const string PLAYER_TAG = "Player";
        public const string IS_SHAKING_ANIMATOR_PARAM = "isShaking";
        public const string SPEED_ANIMATOR_PARAM = "speed";
        public const string ATTACK_ANIMATOR_PARAM = "attack";
        public const string INTERACT_ANIMATOR_PARAM = "interact";
        public const string DEFEATED_ANIMATOR_PARAM = "defeated";
        public const string ENEMY_TAG = "Enemy";
        public const string CAMERA_TAG = "MainCamera";
    }
}